--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -16,11 +16,10 @@
   right: 0;
   max-width: 520px;
   max-height: 580px;
-  
-}
 
-.swiper-slide {
-  pointer-events: none; 
+  .swiper-slide {
+    pointer-events: none;
+  }
 }
 
 .pts {
@@ -40,10 +39,10 @@
   right: 0;
   margin: auto;
   z-index: 1;
-}
 
-.slide-button.reverse {
-  transform: rotate(180deg);
+  .reverse {
+    transform: rotate(180deg);
+  }
 }
 
 /* top slide */
@@ -59,18 +58,18 @@
 .message {
   /* z-index: 100; */
   position: relative;
-}
 
-.message h3 {
-  margin: 40px 0 0;
-}
-.message ul {
-  list-style-type: none;
-  padding: 0;
-}
-.message li {
-  display: inline-block;
-  margin: 0 10px;
+  h3 {
+    margin: 40px 0 0;
+  }
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  li {
+    display: inline-block;
+    margin: 0 10px;
+  }
 }
 
 .authers {
