update: fix UI & text

--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -14,3 +14,13 @@
     display: inline-flex;
   }
 }
+
+// transition
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.3s;
+}
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+}
