update: add firebase functinos

--- a/src/pages/history/History.scss
+++ b/src/pages/history/History.scss
@@ -28,8 +28,8 @@
 
 // card
 .card-container {
-  color: #000;
-  background-color: #ffee33;
+  color: #000 !important;
+  background-color: #ffee33 !important;
   border: 8px solid #ffee33;
   position: relative;
 
