--- a/src/layouts/default.scss
+++ b/src/layouts/default.scss
@@ -9,3 +9,32 @@
 .v-footer {
   z-index: 100;
 }
+
+.network-info {
+  position: absolute;
+  top: -24px;
+  width: 100%;
+  height: 24px;
+  font-size: 12px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  background-color: #aaaab0;
+  transition: all 400ms ease-in;
+
+  &.on {
+    top: 0;
+  }
+
+  &.ropsten {
+    background-color: #d83453;
+  }
+
+  &.kovan {
+    background-color: #601290;
+  }
+
+  &.rinkeby {
+    background-color: #e3b455;
+  }
+}
