update: add goods

--- a/src/layouts/default.scss
+++ b/src/layouts/default.scss
@@ -38,3 +38,12 @@
     background-color: #e3b455;
   }
 }
+
+.menu-title {
+  &:hover {
+    background: green;
+  }
+  &:active {
+    background: yellow;
+  }
+}
