--- a/src/pages/history/History.scss
+++ b/src/pages/history/History.scss
@@ -31,6 +31,7 @@
   color: #000 !important;
   background-color: #ffee33 !important;
   border: 8px solid #ffee33;
+  box-sizing: border-box;
   position: relative;
 
   &.tokend {
@@ -129,5 +130,11 @@
 
   .reverse {
     transform: rotate(180deg);
+  }
+}
+
+@media screen and (max-height: 667px) {
+  .card-container {
+    transform: scale(0.8);
   }
 }
