--- a/styles/Description.module.css
+++ b/styles/Description.module.css
@@ -20,9 +20,9 @@
   padding: 16px 32px;
   position: relative;
   pointer-events: none;
-  /* max-width: calc(100% - 156px); */
   width: 100%;
-  max-width: 360px;
+  max-width: 90%;
+  min-width: 240px;
 }
 
 .message {
